# aidemo

./: README.md
crewai/content_research_writer/: README.md  pyproject.toml
crewai/content_research_writer/src/content_research_writer/: crew.py  main.py
crewai/customer_support/: README.md  pyproject.toml
crewai/customer_support/src/customer_support/: crew.py  main.py
crewai/latest_ai_development/: pyproject.toml
crewai/latest_ai_development/output/: report.md
crewai/latest_ai_development/src/latest_ai_development/: crew.py  main.py
crewai/tailorjob/: README.md  pyproject.toml
crewai/tailorjob/src/tailorjob/: crew.py  main.py
langchain/: first.py
langchain/langgraphEssentials/: first.py  second.py  third.py
langchain/langgraphEssentials/emailagent/: email_app.py  email_meta.py
prompt/: openai_base.py  test001.py
