[project]
name = "content_research_writer"
version = "0.1.0"
description = "content_research_writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1"
]

[project.scripts]
content_research_writer = "content_research_writer.main:run"
run_crew = "content_research_writer.main:run"
train = "content_research_writer.main:train"
replay = "content_research_writer.main:replay"
test = "content_research_writer.main:test"
run_with_trigger = "content_research_writer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
