[project]
name = "customer_support"
version = "0.1.0"
description = "customer_support using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1"
]

[project.scripts]
customer_support = "customer_support.main:run"
run_crew = "customer_support.main:run"
train = "customer_support.main:train"
replay = "customer_support.main:replay"
test = "customer_support.main:test"
run_with_trigger = "customer_support.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
