[project]
name = "tailorjob"
version = "0.1.0"
description = "TailorJob using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1"
]

[project.scripts]
tailorjob = "tailorjob.main:run"
run_crew = "tailorjob.main:run"
train = "tailorjob.main:train"
replay = "tailorjob.main:replay"
test = "tailorjob.main:test"
run_with_trigger = "tailorjob.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
